--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ bitflags = "2.5.0"
 flat_device_tree = { version = "3.1.0", features = ["pretty-printing"] }
 log = "0.4.21"
 uefi = { version = "0.28.0", features = ["logger", "panic_handler", "global_allocator", "alloc"] }
+zero = "0.1.3"
