--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@ name = "uefi-hello-world"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
 
 [dependencies]
 bitflags = "2.5.0"
